--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@ayushmanmishra/toon",
+  "name": "@am/toon",
   "version": "1.1.0",
-  "description": "Token-Oriented Object Notation - A compact format for LLM prompts with ~50% fewer tokens than JSON",
+  "description": "Token-Oriented Object Notation - A compact format for LLM prompts with ~50% fewer tokens than JSON. Optimized for OpenAI, Anthropic, and other LLM APIs.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
